[package]
name = "sdr-server-rtltcp"
version = "0.1.0"
description = "rtl_tcp-compatible server — streams local RTL-SDR I/Q over TCP with tuning command channel. Port of original/librtlsdr/src/rtl_tcp.c."
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Default includes `mdns-advertise` so the CLI binary and sdr-rs'
# bundled build keep their announce-by-default UX. Library consumers
# who only want the Server API can build with
# `default-features = false` and skip the mdns-sd dep tree entirely.
default = ["mdns-advertise"]
# Pulls in `sdr-rtltcp-discovery` so the bin target can advertise via
# mDNS. The library itself never references this dep; gating it here
# enforces the stated design intent ("lib stays free of this dep")
# at the manifest level rather than relying on source-level hygiene.
mdns-advertise = ["dep:sdr-rtltcp-discovery"]

[dependencies]
sdr-rtlsdr.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Needed for `SO_KEEPALIVE` via setsockopt — std::net::TcpStream exposes
# `set_nodelay` and friends but not keepalive. Rather than pull in socket2
# just for one call, we use the same libc/allow(unsafe_code) pattern used
# elsewhere in the workspace (e.g. crates/sdr-transcription/src/util.rs).
libc.workspace = true
rusb.workspace = true
# Binary only — enables `-s info` style env-filter logging for the CLI.
# Kept in regular deps (not dev-deps) because the `[[bin]]` target needs it.
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# Optional — only pulled in when `mdns-advertise` is enabled. The bin
# target requires this feature (see `required-features` below).
sdr-rtltcp-discovery = { workspace = true, optional = true }

[lints]
workspace = true

[[bin]]
name = "sdr-rtl-tcp"
path = "src/bin/sdr-rtl-tcp.rs"
# The bin invokes `sdr_rtltcp_discovery::{Advertiser, ...}` directly,
# so its build MUST enable `mdns-advertise`. This ties the feature to
# the binary target specifically without forcing library consumers to
# opt out.
required-features = ["mdns-advertise"]

