[package]
name = "sdr-server-rtltcp"
version = "0.1.0"
description = "rtl_tcp-compatible server — streams local RTL-SDR I/Q over TCP with tuning command channel. Port of original/librtlsdr/src/rtl_tcp.c."
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Default includes `mdns-advertise` so the CLI binary and sdr-rs'
# bundled build keep their announce-by-default UX. Library consumers
# who only want the Server API can build with
# `default-features = false` and skip the mdns-sd dep tree entirely.
default = ["mdns-advertise"]
# Pulls in `sdr-rtltcp-discovery` so the bin target can advertise via
# mDNS. The library itself never references this dep; gating it here
# enforces the stated design intent ("lib stays free of this dep")
# at the manifest level rather than relying on source-level hygiene.
mdns-advertise = ["dep:sdr-rtltcp-discovery"]

[dependencies]
sdr-rtlsdr.workspace = true
thiserror.workspace = true
tracing.workspace = true
# On unix targets we use `libc::setsockopt` directly — lets us tune
# `TCP_KEEPIDLE` / `TCP_KEEPINTVL` / `TCP_KEEPCNT` (Linux-specific)
# without pulling in socket2 for the whole workspace. The
# non-unix fallback below uses socket2 because std::net::TcpStream
# has no keepalive setter and raw winsock ioctls via windows-sys
# would be a larger dep footprint than socket2's abstraction
# for the same result (#393 CR round 1).
libc.workspace = true
rusb.workspace = true
# Binary only — enables `-s info` style env-filter logging for the CLI.
# Kept in regular deps (not dev-deps) because the `[[bin]]` target needs it.
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# Optional — only pulled in when `mdns-advertise` is enabled. The bin
# target requires this feature (see `required-features` below).
sdr-rtltcp-discovery = { workspace = true, optional = true }
# LZ4 streaming compression for the extended handshake (#307). Pulled
# in unconditionally because the protocol types + codec enum need to
# know about LZ4 regardless of whether a given build actually uses it
# — the server declines LZ4 cleanly by advertising a None-only codec
# mask at handshake time, which doesn't require the codec trait impls
# to be absent.
lz4_flex.workspace = true

# Non-unix (Windows, WASI, etc.) keepalive enable for the #393
# zombie-detection fallback path. `std::net::TcpStream` has no
# keepalive setter; unix paths use `libc::setsockopt` directly, so
# this only wires up socket2 on platforms we'd otherwise leave with
# `Err(Unsupported)`. Scoped to `cfg(not(unix))` so the dep doesn't
# affect the primary Linux/macOS builds.
[target.'cfg(not(unix))'.dependencies]
socket2 = "0.5"

[lints]
workspace = true

[[bin]]
name = "sdr-rtl-tcp"
path = "src/bin/sdr-rtl-tcp.rs"
# The bin invokes `sdr_rtltcp_discovery::{Advertiser, ...}` directly,
# so its build MUST enable `mdns-advertise`. This ties the feature to
# the binary target specifically without forcing library consumers to
# opt out.
required-features = ["mdns-advertise"]

