[package]
name = "sdr-splash-gtk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GTK4 + libadwaita splash window for sdr-rs (Linux)"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = { workspace = true }
libadwaita = { workspace = true }

[dependencies]
tracing.workspace = true

[lints]
workspace = true
