[package]
name = "sdr-transcription"
version = "0.1.0"
description = "Live audio transcription via Whisper"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

# Internal cfg flags. Source code uses #[cfg(feature = "whisper")] /
# #[cfg(feature = "sherpa")] to gate per-backend code. Pulled in by the
# user-facing whisper-* / sherpa-* features below.
whisper = ["dep:whisper-rs"]
sherpa = ["dep:sherpa-onnx"]

# User-facing build targets — pick exactly one.
#
# Whisper backend with accelerator variants:
whisper-cpu = ["whisper"]
whisper-cuda = ["whisper", "whisper-rs/cuda"]
whisper-hipblas = ["whisper", "whisper-rs/hipblas"]
whisper-vulkan = ["whisper", "whisper-rs/vulkan"]
whisper-metal = ["whisper", "whisper-rs/metal"]
whisper-intel-sycl = ["whisper", "whisper-rs/intel-sycl"]
whisper-openblas = ["whisper", "whisper-rs/openblas"]

# Sherpa backend (CPU only for now):
sherpa-cpu = ["sherpa"]

[dependencies]
whisper-rs = { workspace = true, optional = true }
sherpa-onnx = { version = "1.12", optional = true }
reqwest.workspace = true
rustfft.workspace = true
sdr-types.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs-next.workspace = true
libc.workspace = true

[lints]
workspace = true
