[package]
name = "sdr-transcription"
version = "0.1.0"
description = "Live audio transcription via Whisper"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

# Internal cfg flags. Source code uses #[cfg(feature = "whisper")] /
# #[cfg(feature = "sherpa")] to gate per-backend code. Pulled in by the
# user-facing whisper-* / sherpa-* features below.
whisper = ["dep:whisper-rs"]
sherpa = ["dep:sherpa-onnx", "dep:tar", "dep:bzip2"]

# User-facing build targets — pick exactly one.
#
# Whisper backend with accelerator variants:
whisper-cpu = ["whisper"]
whisper-cuda = ["whisper", "whisper-rs/cuda"]
whisper-hipblas = ["whisper", "whisper-rs/hipblas"]
whisper-vulkan = ["whisper", "whisper-rs/vulkan"]
whisper-metal = ["whisper", "whisper-rs/metal"]
whisper-intel-sycl = ["whisper", "whisper-rs/intel-sycl"]
whisper-openblas = ["whisper", "whisper-rs/openblas"]

# Sherpa backend — pick exactly one:
#
#   sherpa-cpu  — CPU-only, static link against k2-fsa's CPU prebuilt
#   sherpa-cuda — NVIDIA GPU via CUDA 12.x + cuDNN 9.x prebuilt. Linux
#                 x86_64 only. First build downloads a ~235 MB sherpa
#                 CUDA archive from k2-fsa plus ~1.83 GB of NVIDIA
#                 CUDA 12 / cuDNN 9 runtime libraries — the latter are
#                 vendored into `$(BINDIR)/sdr-rs-libs/` by
#                 `make install`, so no parallel system-wide CUDA 12
#                 install is required. Only the NVIDIA kernel driver
#                 has to come from the host. See the README's Sherpa
#                 CUDA section for the full install story.
#
# These are mutually exclusive (see the `compile_error!` guards in lib.rs).
sherpa-cpu = ["sherpa", "sherpa-onnx/static"]
sherpa-cuda = ["sherpa", "sherpa-onnx/cuda"]

[dependencies]
whisper-rs = { workspace = true, optional = true }
sherpa-onnx = { workspace = true, optional = true }
reqwest.workspace = true
rustfft.workspace = true
sdr-types.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs-next.workspace = true
libc.workspace = true
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.4", optional = true }

[lints]
workspace = true
