[package]
name = "sdr-tray"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "StatusNotifierItem tray-icon sidecar for sdr-rs (Linux only)"

[dependencies]
cairo-rs = { workspace = true }
ksni = { workspace = true }
librsvg = { workspace = true }
smol = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
