[package]
name = "sdr-ui"
version = "0.1.0"
description = "GTK4 + libadwaita UI — waterfall, FFT, VFO controls"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
pipewire = ["sdr-sink-audio/pipewire"]

whisper = ["sdr-transcription/whisper"]
sherpa = ["sdr-transcription/sherpa"]

cuda = ["whisper", "sdr-transcription/cuda"]
hipblas = ["whisper", "sdr-transcription/hipblas"]
vulkan = ["whisper", "sdr-transcription/vulkan"]
metal = ["whisper", "sdr-transcription/metal"]
intel-sycl = ["whisper", "sdr-transcription/intel-sycl"]
openblas = ["whisper", "sdr-transcription/openblas"]

[dependencies]
sdr-types.workspace = true
sdr-dsp.workspace = true
sdr-pipeline.workspace = true
sdr-config.workspace = true
sdr-radio.workspace = true
sdr-rtlsdr.workspace = true
sdr-source-rtlsdr.workspace = true
sdr-source-network.workspace = true
sdr-source-file.workspace = true
sdr-sink-audio.workspace = true
sdr-sink-network.workspace = true
sdr-radioreference.workspace = true
sdr-transcription.workspace = true
gtk4.workspace = true
libadwaita.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
cairo-rs.workspace = true
bytemuck.workspace = true

[lints]
workspace = true
