[package]
name = "sdr-ui"
version = "0.1.0"
description = "GTK4 + libadwaita UI — waterfall, FFT, VFO controls"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
pipewire = ["sdr-sink-audio/pipewire"]

whisper = ["sdr-transcription/whisper"]
sherpa = ["sdr-transcription/sherpa"]

whisper-cpu = ["whisper", "sdr-transcription/whisper-cpu"]
whisper-cuda = ["whisper", "sdr-transcription/whisper-cuda"]
whisper-hipblas = ["whisper", "sdr-transcription/whisper-hipblas"]
whisper-vulkan = ["whisper", "sdr-transcription/whisper-vulkan"]
whisper-metal = ["whisper", "sdr-transcription/whisper-metal"]
whisper-intel-sycl = ["whisper", "sdr-transcription/whisper-intel-sycl"]
whisper-openblas = ["whisper", "sdr-transcription/whisper-openblas"]

sherpa-cpu = ["sherpa", "sdr-transcription/sherpa-cpu"]
sherpa-cuda = ["sherpa", "sdr-transcription/sherpa-cuda"]

# sdr-ui is the GTK4 + libadwaita frontend and builds only on Linux. On other
# platforms (macOS, Windows) the crate compiles to an empty rlib via the
# top-of-file `#![cfg(target_os = "linux")]` gate in `src/lib.rs`. The macOS
# frontend lives in `apps/macos/` (SwiftUI) and consumes the engine through
# the planned `sdr-core` + `sdr-ffi` crates instead.

[dependencies]
# The headless engine. sdr-core owns the DSP controller, the message
# enums, the SharedFftBuffer, and the WAV writer; sdr-ui consumes them
# through the Engine facade plus a few re-exports for backward compat.
sdr-core.workspace = true

# Cross-platform engine-adjacent deps still touched directly by sdr-ui's
# panel and spectrum code (FftWindow types, demod modes, etc.).
sdr-types.workspace = true
sdr-dsp.workspace = true
sdr-pipeline.workspace = true
sdr-config.workspace = true
sdr-radio.workspace = true
sdr-rtlsdr.workspace = true
sdr-source-rtlsdr.workspace = true
# Scanner state machine — UI references `ScannerState` to map
# phase enum variants to human-readable labels and builds
# `ChannelKey`/`ScannerChannel` values for `UpdateScannerChannels`.
sdr-scanner.workspace = true
sdr-sink-audio.workspace = true
sdr-radioreference.workspace = true
sdr-transcription.workspace = true
# Discovery for the rtl_tcp client picker — Browser events feed the
# AdwExpanderRow under the source panel.
sdr-rtltcp-discovery.workspace = true
# Server for the share-over-network panel. `default-features = false`
# because we already depend on `sdr-rtltcp-discovery` directly — no
# need for the server crate to pull in its own (feature-gated) copy.
# Using the path form (not `workspace = true`) because current cargo
# rejects child-side `default-features = false` when inheriting.
sdr-server-rtltcp = { path = "../sdr-server-rtltcp", default-features = false }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bytemuck.workspace = true

# GTK stack — Linux only.
[target.'cfg(target_os = "linux")'.dependencies]
gtk4.workspace = true
libadwaita.workspace = true
cairo-rs.workspace = true

[lints]
workspace = true
